# vcf-isec

./: .bandit  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yaml  trunk-check.yaml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml  bandit.yaml
src/vcf_isec/: cli.py  errors.py  isec.py  parser.py
tests/pytest/: test_isec.py
tests/resources/: cmp-test-a.vcf  cmp-test-b.vcf  sample.vcf
tests/unit/: test_no_op.py
