[tool.poetry]
name = "vcf-isec"
version = "0.1.0"
description = "A simple python implementation of Variant Call Format intersection and complements"
authors = ["Brendan Smith <brendan.smith.93@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysam = "^0.22.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.3.0"

[tool.poetry.scripts]
vcf-isec = 'vcf_isec.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
